--- a/packages/sevenspan/code-generator/composer.json
+++ b/packages/sevenspan/code-generator/composer.json
@@ -12,7 +12,10 @@
       "name": "sevenspan"
     }
   ],
-  "require": {},
+  "require": {
+     "php": "^8.0",
+    "illuminate/support": "^9.0|^10.0|^11.0"
+  },
   "extra": {
     "laravel": {
       "providers": [
