--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   ],
   "require": {
      "php": "^8.0",
-    "illuminate/support": "^9.0|^10.0|^11.0|^12.0"
+    "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
+    "livewire/livewire": "^3.0"
   },
   "extra": {
     "laravel": {
