--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
       "name": "mruganshi"
     }
   ],
+  "license": "MIT", 
   "require": {
      "php": "^8.0",
     "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
